test/prism_regression/invalid/missing_node.rb
# typed: true
# disable-parser-comparison: true

1 +
